# youtube-ev-leadgen

./: .cursorrules  .env.example  .gitignore  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.optimized  OPTIMIZATION_SUMMARY.md  PROJECT_RULES.md  README.md  docker-compose.yml  instance-info.txt  main.py  pyproject.toml  run_tests.py  test_runner.py
.github/workflows/: ci-cd.yml
aws/: AWS_SETUP_GUIDE.md  EC2_DEPLOYMENT_GUIDE.md  cleanup.sh  cloudformation-template.yml  deploy.sh  ec2-deploy.sh
career/: interview_presentation.md  linkedin_post.md  portfolio_project.md  resume_entry.md
config/: cursor_rules.md  project_rules.md
dashboard/: app.py  enhanced_dashboard.py  streamlit_dashboard.py
data/: comments_data.csv.backup  comments_data_cleaned.csv.backup
docs/: aws-deployment-guide.md  conversation_summary.md  research_methodology.md  session_summary.md  workflow.md
presentation/: project_demonstration.ipynb
scripts/: analytics_and_alerts.py  data_ingestion.py  data_preprocessing.py  export_leads.py  logger_setup.py  objection_analysis.py  predictive_lead_scoring.py  run_full_pipeline.sh  run_pipeline.py  send_report_email.py  sentiment_intent_analysis.py  utils.py  visualize_cleaned_data.py  visualize_enriched_data.py  visualize_lead_trends.py  visualize_predicted_leads.py
tests/: test_data_processing.py  test_streamlit_browser.py  test_streamlit_dashboard.py  test_utils.py
